Progress on dynamic graphql schema generation.